fix when used on safari mac

--- a/src/components/picker/index.less
+++ b/src/components/picker/index.less
@@ -24,8 +24,8 @@
     z-index: calc(var(--solidMobile-picker-content-zIndex) + 2);
     position: absolute;
     width: 100%;
-    touch-action: none;
     user-select: none;
+    cursor: pointer;
     height: 100%;
     top: 0;
     left: 0;
